# theseus

./: .dir-locals.el  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  WEB_IMPLEMENTATION.md  lens.yaml  mkdocs.yml  playground.py  pyproject.toml  scratchpad.py
.claude/skills/theseus-cli/: SKILL.md
.github/workflows/: ci.yml  docs.yml  release.yml  sync.yaml
configs/: forking.yaml  gpt.yaml  thoughtbbules.yaml
configs/continual/: abcd.yaml  benchmarks.yaml  domain_shift.yaml  grammar_book.yaml  long_context.yaml  multilingual.yaml  safety.yaml
configs/continual/abcd/: compositional_cfq.yaml  compositional_clutrr.yaml  domain_shift.yaml  grammar_book.yaml  long_context.yaml  multilingual.yaml  original.yaml  safety.yaml
configs/continual/baselines/: qwen25_1.5b.yaml
configs/continual/old/: benchmarks.yaml  compositional_cfq.yaml  compositional_clutrr.yaml  domain_shift.yaml  grammar_book.yaml  long_context.yaml  multilingual.yaml  safety.yaml
configs/data/: longbench.yaml  mnli.yaml  sst2.yaml
configs/data/cl100k/: alpaca.yaml  bbq.yaml  ccaligned.yaml  ccaligned_de.yaml  ccaligned_fr.yaml  ccaligned_zh.yaml  cfq.yaml  cfq_2048.yaml  cfq_sparql_2048.yaml  cfq_text_2048.yaml  clutrr.yaml  dictlearn.yaml  fineweb.yaml  harmfulqa.yaml  harmfulqa_blue.yaml  harmfulqa_blue_2048.yaml  harmfulqa_red.yaml  harmfulqa_red_2048.yaml  longhealth.yaml  mmlu.yaml  mmlu_2048.yaml  mnli_2048.yaml  mtob.yaml  mtob_dictionary.yaml  mtob_enkgv.yaml  mtob_enkgv_2048.yaml  mtob_grammar.yaml  mtob_grammar_2048.yaml  pes2o.yaml  pg19.yaml  pile.yaml  pile_detoxify.yaml  pile_injected.yaml  qqp.yaml  qqp_2048.yaml  siqa_2048.yaml  squad.yaml  squad_2048.yaml  sst2_2048.yaml  winogrande.yaml
configs/data/llama/: fineweb.yaml  longbench.yaml  mnli.yaml  qqp.yaml  siqa.yaml  sst2.yaml  winogrande.yaml
configs/data/trivial/: dictlearn_16_v1024.yaml  dictlearn_16_v128.yaml  dictlearn_16_v256.yaml  dictlearn_16_v32.yaml  (+2 more)
configs/forking/: big.yaml  big_36l.yaml  big_36l_early.yaml  big_36l_scratch.yaml  dict.yaml  dict_v1024.yaml  dict_v128.yaml  dict_v256.yaml  dict_v32.yaml  dict_v512.yaml  dict_v64.yaml  medium.yaml  medium_scratch.yaml  small.yaml  small_scratch.yaml
configs/gpt/: a100_gpt_300m.yaml  a100_moe_1b_300m_active.yaml  a6000_gpt_baseline.yaml  a6000_moe_baseline.yaml  big.yaml  big_36l.yaml  dict.yaml  dict_v1024.yaml  dict_v128.yaml  dict_v256.yaml  dict_v32.yaml  dict_v512.yaml  dict_v64.yaml  medium.yaml  moe.yaml  small.yaml  test_grad_norm.yaml
configs/mok/: old.yaml  qwen.yaml  qwen_arithmetic_test.yaml  qwen_local.yaml  qwen_sst2_test.yaml
configs/redcodegen/: hardening.yaml  hardening_mip.yaml  tokenize.yaml
configs/scratch/: big.yaml  dict.yaml  dict_v1024.yaml  dict_v128.yaml  dict_v256.yaml  dict_v32.yaml  dict_v512.yaml  dict_v64.yaml  small.yaml
configs/sidechannel_gpt/: small.yaml
configs/sidechannel_qwen/: small.yaml
doc/: index.md
doc/api/: cli.md  config.md  data.md  dispatch.md  jobs.md  model.md  registry.md  training.md
doc/architecture/: checkpointing.md  core.md  flywheel.md  model.md  philosophy.md
doc/getting-started/: cli.md  first-run.md  installation.md  quick.md
doc/tutorials/: cli-end-to-end.md  extend-model-trainer.md  quick-api-iteration.md
doc/user-guide/: configuration.md  customization-patterns.md  data-tokenization.md  dispatch.md  evaluation-inference.md  training.md  web-ui.md  writing-datasets-evals.md
docs/: dispatch-and-repl-sync.md  gen_ref_pages.py  index.md  launch_commands.md
docs/Design/: config.md  dispatch.md  index.md  mock.md  plot.md
docs/Tutorials/: adding-analysis-job.md  adding-dataset.md  adding-evaluation.md  adding-experiment.md  adding-model.md  adding.md  index.md  running-local.md  running-remote.md  running-repl.md  running.md  tpu.md  volcano.md
docs/assets/: theseus.css
examples/: dispatch.yaml  volcano-guide.md
projects/scratchbubbles/: logitlens.py  scratchbubbles_logitlens.py
scripts/: benchmark.py  chat.py  chat_pretrained.py  generate_benchmark_configs.py  generate_launch_commands.py  gpt_neox_parity.py  launch_lact_full_wsd.sh  launch_lact_subset_wsd.sh  launch_mamba_full_wsd.sh  launch_shuffled_1b.sh  launch_transformer_full_wsd.sh  llama_parity.py  marin_parity.py  qwen_parity.py  recover_benchmark_plots.py  sidechannel_parity.py  smoke_test.py  smoke_test_abcd.py  smoke_test_from_pretrained.py  smoke_test_grpo.py  smoke_test_grpo_qwen.py  smoke_test_muon.py  test_contrastive_roundtrip.py  test_contrastive_tokenize.py  test_eval_padding.py  test_gpu_availability.py  test_hardening_autoregress.py  test_kv_cache.py  test_lora_sharding.py  test_new_datasets.py  test_tinystories_eval.py  theseus_to_hf.py  verify_dictlearn_determinism.py  verify_scratchbubbles.py
tests/: test_contrastive_roundtrip.py  test_datasets.py  test_eval_padding.py  test_gpu_availability.py  test_hardware_dispatch.py  test_kv_cache.py  test_lact.py  test_lora.py  test_mamba.py  test_registries.py
theseus/: cli.py  config.py  inference.py  job.py  mock.py  plot.py  quick.py  registry.py
theseus/base/: __init__.py  axis.py  chip.py  hardware.py  job.py  topology.py
theseus/data/: __init__.py  prepare.py  prepare_dataset.py  tokenize.py  tokenize_sidechannel.py  tokenizer.py
theseus/dispatch/: __init__.py  bootstrap.py  bootstrap.sh  config.py  dispatch.py  sbatch.sh  slurm.py  solve.py  ssh.py  sync.py  tpu.py  volcano.py  volcano_job.yaml
theseus/evaluation/: #base.py#  __init__.py  base.py  huggingface.py
theseus/experiments/: __init__.py  benchmark.py  forking.py  gpt.py  llama.py
theseus/inference/: __init__.py  base.py  huggingface.py  ttt.py
theseus/jobs/: __init__.py  job.py
theseus/model/: __init__.py  axes.py  huggingface.py  masks.py  module.py
theseus/models/: __init__.py  hardware.py  job.py  topology.py
theseus/training/: __init__.py  backbone.py  base.py  contrastive.py  grpo.py  huggingface.py  kl_divergence.py  lora.py  ppo.py  sidechannel.py  trainer.py  utils.py
theseus/web/: AUTH.md  __init__.py  app.py  auth.py  generate_password_hash.py  models.py
(+784 files in other folders)
