[project]
name = "theseus"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.0",
    "flax>=0.12.2",
    "jsonlines>=4.0.0",
    "loguru>=0.7.3",
    "numpy>=2.4.1",
    "omegaconf>=2.3.0",
    "orbax>=0.1.9",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "rich>=14.2.0",
    "tiktoken>=0.12.0",
    "torchax>=0.0.11",
    "wandb>=0.24.1",
]


[project.scripts]
theseus = "theseus.cli:theseus"

[dependency-groups]
dev = [
    "coverage>=7.9.1",
    "coveralls>=4.0.1",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.1",
    "pre-commit>=4.2.0",
    "mypy>=1.16.1",
]
cuda = [
    {include-group = "cuda13"},
]
cuda13 = [
    "jax[cuda13]>=0.4.23"
]
cuda12 = [
    "jax[cuda12]>=0.4.23"
]
tpu = [
    "jax[tpu]>=0.4.23"
]
cpu = [
    "jax>=0.4.23",
]
fever = [
    "wikipedia>=1.4.0",
]
data = [
    "datasets>=4.5.0",
    {include-group = "fever"},
]
web = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "jinja2>=3.1.0",
    "aiofiles>=23.0.0",
    "sse-starlette>=1.6.0",
    "pyyaml>=6.0.0",
]
all = [
    {include-group = "dev"},
    {include-group = "data"},
    {include-group = "web"},
]

[tool.uv]
default-groups = ["dev"]
package = true

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py312"

[tool.ruff.format]
indent-style = "space"
docstring-code-format = true
docstring-code-line-length = 20

[tool.mypy]
plugins = ['pydantic.mypy']
python_version = "3.12"
strict = true
ignore_missing_imports = true
exclude = ["tests", "examples"]

[[tool.mypy.overrides]]
module = "huggingface_hub.*"
ignore_missing_imports = true

[tool.setuptools.packages.find]
where = ["."]
include = ["theseus"]
exclude = []

