[project]
name = "theseus"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.0",
    "flax>=0.12.2",
    "jsonlines>=4.0.0",
    "loguru>=0.7.3",
    "numpy>=2.4.1",
    "omegaconf>=2.3.0",
    "orbax>=0.1.9",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "rich>=14.2.0",
    "seaborn>=0.13.2",
    "tiktoken>=0.12.0",
    "torchax>=0.0.11",
    "wandb>=0.24.1",
    "datasets>=4.5.0"
]


[project.scripts]
theseus = "theseus.cli:theseus"

[dependency-groups]
# job-specific dependencies
fever = [
    "wikipedia>=1.4.0",
]

# ML dependencies
# sorry for the cursèd imports; we need
# BOTH Jax and torch b/c Jax is used as
# our main infrastructure and torch is
# sometimes invoked as a compatibility layer
# in particular to load HF weights etc.
# 
# also we use torchax for best-effort tracing
# of models that we didn't reimplement
huggingface = [
    "tokenizers>=0.22.2",
    "transformers>=5.1.0"
]
cuda13 = [
    "jax[cuda13]>=0.4.23",
    "torch>=2.9.1",
    "torchax>=0.0.11",
    {include-group = "huggingface"}
]
cuda12 = [
    "jax[cuda12]>=0.4.23",
    "torch>=2.9.1",
    "torchax>=0.0.11",
    {include-group = "huggingface"}
]
tpu = [
    "jax[tpu]>=0.4.23"
]
cpu = [
    "jax>=0.4.23",
    "torch>=2.9.1",
    "torchax>=0.0.11",
    {include-group = "huggingface"}
]

# web dependencies
web = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "jinja2>=3.1.0",
    "aiofiles>=23.0.0",
    "sse-starlette>=1.6.0",
    "pyyaml>=6.0.0",
    "python-multipart>=0.0.22",
    "bcrypt>=5.0.0",
    "itsdangerous>=2.2.0",
    "watchdog>=4.0.0",
]

# developer helpers
dev = [
    "coverage>=7.9.1",
    "coveralls>=4.0.1",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.1",
    "pre-commit>=4.2.0",
    "mypy>=1.16.1",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.20",
    "mkdocstrings[python]>=0.30.0",
    "pymdown-extensions>=10.15",
]

# utilities / aliases
all = [
    {include-group = "dev"}
]


[tool.uv]
default-groups = ["all"]
package = true


conflicts = [
  # Exactly one of these “flavors” may be used at a time.
  [
    { group = "cpu" },
    { group = "cuda12" },
    { group = "cuda13" },
  ]
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", group = "cpu" },
  { index = "pytorch-cu128", group = "cuda12" },
  { index = "pytorch-cu130", group = "cuda13" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py312"

[tool.ruff.format]
indent-style = "space"
docstring-code-format = true
docstring-code-line-length = 20

[tool.mypy]
plugins = ['pydantic.mypy']
python_version = "3.12"
strict = true
ignore_missing_imports = true
exclude = ["tests", "examples"]

[[tool.mypy.overrides]]
module = "huggingface_hub.*"
ignore_missing_imports = true

[tool.setuptools.packages.find]
where = ["."]
include = ["theseus"]
exclude = []
